# rust_bencher

./: .gitignore  Cargo.toml  build.rs  run_arm.sh
benches/: bench_gemm.rs
src/: gemm.rs  lib.rs  main_gemm.rs
